--- a/late-releasing-block.Rmd
+++ b/late-releasing-block.Rmd
@@ -544,10 +544,6 @@ org_block_type <- block_raw_tbl_loc %>%
 
 
 
-check <- slot_data_prc_tbl %>%
-  head(10) %>%
-  collect()
-
 
 block_distribution <- slot_data_prc_tbl %>%
   # filter(PROV_ID == "1410756") %>%
@@ -624,7 +620,8 @@ block_error <- slot_data_prc_tbl %>%
   # filter(DEPARTMENT_ID == "8827031") %>%
   left_join(org_block_type,
             by = c("DEPARTMENT_ID", "PROV_ID", "SLOT_BEGIN_TIME")) %>%
-  left_join(clarity_ser_tbl_loc %>% select(PROV_ID, PROV_TYPE, ACTIVE_STATUS)) %>%
+  left_join(clarity_ser_tbl_loc %>% 
+              dplyr::select(PROV_ID, PROV_TYPE, ACTIVE_STATUS)) %>%
   # filter(PROV_TYPE == "Physician") %>%
   left_join(clarity_ser_2_tbl_loc %>%
               dplyr::select(PROV_ID, GENERIC_YN)) %>%
